# noplag

./: .gitignore  README.md
.github/workflows/: excavator.yml
bucket/: chibi.json  fagram.json  friendnet-np.json  moo0-system-monitor.json  neohtop-nightly.json  neohtop.json  vmcli.json
scripts/: ReadMe.MD  base_module.py  git_commands.py  main.py  pyproject.toml  shared.py  steal.py
