[project]
name = "noplag-scripts"
version = "1.0.0"
description = ""
authors = [
    {name = "NoPlagiarism",email = "37241775+NoPlagiarism@users.noreply.github.com"}
]
license = {text = "WTFPL"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "gitpython (>=3.1.46,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
